# tiantong-uav-vcsc

./: .env.sample  .gitignore  Cargo.toml  README.md
config/: development.yaml  test.yaml
frontend/: .gitignore  .prettierignore  .prettierrc  README.md  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/config/: settings.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: index.ts
frontend/src/routes/: index.tsx
frontend/src/types/: api.d.ts
frontend/src/utils/: time.ts
libs/admin_parser/: Cargo.toml  README.md
libs/migration/: Cargo.toml  README.md
libs/migration/src/: lib.rs  m20250101_000002_seed_user.rs  m20250101_000003_device.rs  m20250806_102144_create_task_table.rs  m20250806_110600_fix_task_timestamp_types.rs  m20250807_000001_create_roles_table.rs  m20250807_000002_create_permissions_table.rs  m20250807_000003_create_user_roles_table.rs  m20250807_000004_create_role_permissions_table.rs  m20250807_000005_seed_rbac_data.rs  m20250808_000001_create_data_management_tables.rs  m20250808_000002_create_collection_data_tables.rs  m20250810_000001_add_device_rtmp_fields.rs  m20250814_000001_add_device_drone_fields.rs  m20250815_000001_anonymize_region_names.rs  m20250821_000001_add_device_connection_status.rs  (+4 more)
src/: app.rs  lib.rs
src/controllers/: admin.rs  auth.rs  collection_data.rs  device.rs  element_type.rs  mod.rs  prediction.rs  rbac.rs  realtime.rs  task.rs  upload.rs  warn.rs  weather_condition.rs
src/middleware/: mod.rs  rbac.rs
src/models/: collection_data.rs  device.rs  device_realtime_data.rs  element_type.rs  history.rs  info.rs  info_area.rs  mod.rs  permission.rs  prediction.rs  prelude.rs  region.rs  role.rs  role_permission.rs  task.rs  user.rs  user_role.rs  warn.rs  weather_condition.rs
src/services/: app_state.rs  broadcast.rs  device_websocket_proxy.rs  mod.rs  mqtt_broker.rs  mqtt_service.rs  realtime_data.rs  service_manager.rs  websocket_proxy.rs
src/tasks/: seed.rs
(+54 files in other folders)
